--- a/api/openapi_server/openapi/schemas/_index.yaml
+++ b/api/openapi_server/openapi/schemas/_index.yaml
@@ -117,3 +117,6 @@ GuestDashboardApplicationTasks:
       title: task
       type: string
   required:
+    - guest_id
+    - application_id
+    - task 
