--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to EC2
 #on: workflow_dispatch
 on: pull_request
 jobs:
-  build-deploy-api:
+  build-api:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -14,9 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -36,17 +37,13 @@ jobs:
         run: |
           python -m pip install build
           python -m build --wheel
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
+      - name: Archive API
+        uses: actions/upload-artifact@v3
         with:
-          key: ${{ secrets.HUU_EC2_SSH_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
-      - name: rsync over SSH the API to EC2
-        run: |
-          # put the contents of the dist directory into its remote counterpart directory
-          # The working-directory is set to api/ so dist/ refers api/dist.
-          rsync --mkpath -r dist/ ubuntu@homeunite.us:github-deploy/api/
-  build-deploy-app:
+          name: api
+          path: api/dist
+          retention-days: 1
+  build-app:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -61,6 +58,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Run npm CI
         run: npm ci
       - name: Build app
@@ -74,14 +72,26 @@ jobs:
           start: npm run dev
           working-directory: ./app
           wait-on: http://localhost:4040
+      - name: Archive App
+        uses: actions/upload-artifact@v3
+        with:
+          name: app
+          path: app/dist
+          retention-days: 1
+  deploy-api-app:
+    needs: [build-api, build-app]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.HUU_EC2_SSH_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
-      - name: rsync over SSH the App to EC2
+          known_hosts: ${{ secrets.HUU_EC2_KNOWN_HOSTS }}
+      - name: rsync over SSH API and App to EC2
         run: |
-          # put the contents of the dist directory into its remote counterpart directory
-          # The working-directory is set to ./app so dist/ refers ./app/dist.
-          rsync --mkpath -r dist/ ubuntu@homeunite.us:github-deploy/app/
+          # upload the api and app directories to the EC2 instance
+          rsync --mkpath -r app ubuntu@homeunite.us:github-deploy/
+          rsync --mkpath -r api ubuntu@homeunite.us:github-deploy/
     
