--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -18,21 +18,21 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8 tox
-          pip install -r requirements.txt
-          pip install -r test-requirements.txt
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with tox
-        run: |
-          tox
+#      - name: Install Python dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          python -m pip install flake8 tox
+#          pip install -r requirements.txt
+#          pip install -r test-requirements.txt
+#      - name: Lint with flake8
+#        run: |
+#          # stop the build if there are Python syntax errors or undefined names
+#          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#      - name: Test with tox
+#        run: |
+#          tox
       - name: Build API
         run: |
           python -m pip install build
@@ -58,20 +58,20 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          # cache: 'npm'
       - name: Run npm CI
         run: npm ci
       - name: Build app
         run: npm run build
-      - name: Test app
-        run: npm run test
-      - name: Run E2E tests
-        uses: cypress-io/github-action@v5
-        with:
-          install: false
-          start: npm run dev
-          working-directory: ./app
-          wait-on: http://localhost:4040
+#      - name: Test app
+#        run: npm run test
+#      - name: Run E2E tests
+#        uses: cypress-io/github-action@v5
+#        with:
+#          install: false
+#          start: npm run dev
+#          working-directory: ./app
+#          wait-on: http://localhost:4040
       - name: Archive App
         uses: actions/upload-artifact@v3
         with:
