Add testing instruction and bump min py version We are using exception matching, which is a feature only available in py 3.10+

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,7 @@ RUN swagger-cli bundle openapi_server/openapi/openapi.yaml \
     --outfile openapi_server/_spec/openapi.yaml \
     --type yaml
 
-FROM python:3.9.10-alpine
+FROM python:3.10-alpine
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -20,6 +20,7 @@ COPY --from=swagger-bundle /usr/src/openapi_server/_spec/openapi.yaml openapi_se
 
 RUN apk update && apk add build-base
 
+RUN pip3 install --upgrade pip
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
