Add minimum additional dependencies

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "connexion [swagger-ui]==2.14.2",
     "psycopg2-binary==2.9.6",
     "python-dotenv==1.0.0",
+    "prance",
+    "openapi-spec-validator",
 ]
 
 [project.urls]
