--- a/api/tox.ini
+++ b/api/tox.ini
@@ -9,5 +9,6 @@ package = wheel
 wheel_build_env = .pkg
 deps =
     pytest>=6
+    Flask-Testing
 commands =
     pytest {tty:--color=yes} {posargs}
