--- a/api/tox.ini
+++ b/api/tox.ini
@@ -8,7 +8,9 @@ description = run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
 deps =
-    pytest>=6
-    Flask-Testing
+    pytest==7.3.1
+    pytest-cov==4.0.0
+    pytest-randomly==3.12.0
+    Flask-Testing==0.8.1
 commands =
     pytest {tty:--color=yes} {posargs}
