--- a/api/tox.ini
+++ b/api/tox.ini
@@ -5,12 +5,8 @@ minversion = 4.6.4
 
 [testenv]
 description = run the tests with pytest
-package = wheel
-wheel_build_env = .pkg
 deps =
-    pytest==7.3.1
-    pytest-cov==4.0.0
-    pytest-randomly==3.12.0
-    Flask-Testing==0.8.1
+    -r{toxinidir}/requirements-dev.txt
 commands =
     pytest {tty:--color=yes} {posargs}
+
