refactor(api): Add back --no-cache-dir option in the Dockerfile
The `pip install` command option `--no-cache-dir` was added back to the
Dockerfile that runs the api.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /opt/HomeUniteUs/api
 COPY . .
 
 RUN python -m pip install --upgrade pip
-RUN python -m pip install -r requirements-dev.txt
+RUN python -m pip install --no-cache-dir -r requirements-dev.txt
 
 EXPOSE 8080
 ENTRYPOINT ["python"]
