--- a/api/tox.ini
+++ b/api/tox.ini
@@ -8,5 +8,5 @@ description = run the tests with pytest
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
-    pytest {tty:--color=yes} {posargs}
+    pytest {tty:--color=yes} {posargs} --cov=openapi_server
 
