refactor(api): Add GitHub workflow to build and deploy to the EC2 instance

--- a/api/tox.ini
+++ b/api/tox.ini
@@ -5,6 +5,7 @@ minversion = 4.6.4
 
 [testenv]
 description = run the tests with pytest
+package = sdist
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
