--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -16,6 +16,8 @@ botocore==1.25.13
     # via
     #   boto3
     #   s3transfer
+build==0.10.0
+    # via pip-tools
 cachetools==5.3.1
     # via tox
 certifi==2023.7.22
@@ -30,6 +32,7 @@ click==8.1.6
     # via
     #   clickclick
     #   flask
+    #   pip-tools
 clickclick==20.10.2
     # via connexion
 colorama==0.4.6
@@ -98,6 +101,7 @@ openapi-spec-validator==0.6.0
     # via openapi-server (pyproject.toml)
 packaging==23.1
     # via
+    #   build
     #   connexion
     #   prance
     #   pyproject-api
@@ -105,6 +109,8 @@ packaging==23.1
     #   tox
 pathable==0.4.3
     # via jsonschema-spec
+pip-tools==7.3.0
+    # via openapi-server (pyproject.toml)
 platformdirs==3.10.0
     # via
     #   tox
@@ -119,6 +125,8 @@ psycopg2-binary==2.9.5
     # via openapi-server (pyproject.toml)
 pyproject-api==1.5.4
     # via tox
+pyproject-hooks==1.0.0
+    # via build
 pytest==7.3.1
     # via
     #   openapi-server (pyproject.toml)
@@ -164,22 +172,25 @@ six==1.16.0
     #   prance
     #   python-dateutil
     #   rfc3339-validator
-sqlalchemy==2.0.20
-    # via alembic
+sqlalchemy==1.4.36
+    # via
+    #   alembic
+    #   openapi-server (pyproject.toml)
 swagger-ui-bundle==0.0.9
     # via connexion
 tomli==2.0.1
     # via
+    #   build
     #   coverage
+    #   pip-tools
     #   pyproject-api
+    #   pyproject-hooks
     #   pytest
     #   tox
 tox==4.6.4
     # via openapi-server (pyproject.toml)
 typing-extensions==4.7.1
-    # via
-    #   alembic
-    #   sqlalchemy
+    # via alembic
 urllib3==1.26.16
     # via
     #   botocore
@@ -190,3 +201,9 @@ werkzeug==2.2.3
     # via
     #   connexion
     #   flask
+wheel==0.41.1
+    # via pip-tools
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
