fix: GitHub deploy workflow npm cache
The setup-node action could not find the package-lock.json file because it looks
in the HomeUniteUs directory. This change tells the action where the file is located.

--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: app/package-lock.json
       - name: Run npm CI
         run: npm ci
       - name: Build app
