fix: GitHub EC2 workflow deploy script handles pip uninstall error
If the python environment does not have anything in it, then the command `pip
uninstall -y -r <(pip freeze)` will cause the build to fail. The fix checks for
this case to allow the script to continue.

--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -113,7 +113,7 @@ jobs:
             # Deploy API
             cd /home/ubuntu/github-deploy/api
             source /opt/dev.homeunite.us/dev-huu-env/bin/activate
-            pip uninstall -y -r <(pip freeze)
+            pip uninstall -y -r <(pip freeze) || echo "Nothing to uninstall"
             pip install --upgrade pip
             pip install -r <(tar xfO $SDIST.tar.gz $SDIST/requirements.txt)
             pip install "$SDIST.tar.gz[prod]"
