--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -19,6 +19,7 @@ jmespath==1.0.1
 jsonschema==4.18.4
 Mako==1.2.4
 MarkupSafe==2.1.1
+marshmallow==3.20.1
 packaging==21.3
 psycopg2-binary==2.9.5
 pyparsing==3.0.8
