api: GitHub workflow fetch tags, API version extraction
The setuptools_scm tool derives the version from the latest tag and the distance
to that tag. This commit is a test to check if enabling the "fetch-tags" option
will allow setuptools_scm to derive the version.

This repository tags version starting with a 'v' but by default setuptools_scm
attempts to derive the version based on SemVer which does not start with a 'v'.
This commit modifies the default regex to extract the version from the tag
without the 'v'.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -162,3 +162,4 @@ where = ["."]
 # The setuptools_scm tool uses this project's git repository to version the build.
 # The git repository is located in the parent directory relative to this file.
 root = ".."
+tag_regex = "^(?:[\\w-]+-)?[vV](?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
