--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -11,7 +11,10 @@ jobs:
     outputs:
       sdist: ${{ steps.package.outputs.sdist }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
+        with:
+          fetch-depth: 500
+          fetch-tags: true
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
