GitHub Workflow make build-deploy to EC2 workflow manually triggered
This commit modifies this GitHub workflow so that it is triggered manually. This
workflow will be listed under the GitHub Action's tab. Once it is selected, the
user will be able to select the "Run workflow" dropdown, select a branch or tag,
and then press the "Run workflow" button to run this workflow against the
selected branch or tag.

This change won't be visible in GitHub Actions until after it is merged into the
defaul branch (main).

--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -1,6 +1,7 @@
 name: Build and Deploy to EC2
-#on: workflow_dispatch
-on: pull_request
+# workflow_dispatch means this workflow is manually triggered.
+# The user will select the branch or tag from the GitHub UI to run this workflow against.
+on: workflow_dispatch
 jobs:
   build-api:
     runs-on: ubuntu-latest
