--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -100,6 +100,9 @@ dependencies = [
     # the multi-file OpenAPI definitions into a flat structure that is passed to
     # the connexion framework.
     "prance==23.6.21.0",
+    # marshmallow is used to define database model schema, to enable easy serialization
+    # of models to and from json. 
+    "marshmallow==3.20.1",
     "openapi-spec-validator==0.6.0",
 ]
 
