--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -66,11 +66,12 @@ lazy-object-proxy==1.9.0
 mako==1.2.4
     # via alembic
 markupsafe==2.1.3
-marshmallow==3.20.1
     # via
     #   jinja2
     #   mako
     #   werkzeug
+marshmallow==3.20.1
+    # via homeuniteus-api (pyproject.toml)
 openapi-schema-validator==0.6.0
     # via openapi-spec-validator
 openapi-spec-validator==0.6.0
@@ -78,6 +79,7 @@ openapi-spec-validator==0.6.0
 packaging==23.1
     # via
     #   connexion
+    #   marshmallow
     #   prance
 pathable==0.4.3
     # via jsonschema-spec
